dist/manifests/borg-manifests/external-dns/01external-dns-kube.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:latest
        args:
        # ingress is also possible
        - --source=ingress
        # (optional) limit to only example.com domains; change to match the zone created above.
        - --domain-filter=hyenaclan.org
        - --provider=cloudflare
        # (optional) enable the proxy feature of Cloudflare (DDOS protection, CDN...)
        - --cloudflare-proxied
        - --log-level=debug
        - --dry-run
