dist/manifests/borg-manifests/external-dns/02external-dns-test-app.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.borg.hyenaclan.org
    #optional
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: nginx
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nginx
  annotations:
    # Note the nginx.ingress.kubernetes.io/ssl-redirect annotation. It is used since we are not specifying a host. When no host is specified, then the default-server is hit, which is configured with a self-signed certificate, and redirects http to https. This issue explains more.
    # https://github.com/kubernetes/ingress-nginx/issues/1567
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
    external-dns.alpha.kubernetes.io/hostname: nginx.borg.hyenaclan.org
    #optional
    external-dns.alpha.kubernetes.io/ttl: "120"
    # NOTE: you need this when the value of path below is more than just '/'
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: \"nginx\"
  labels:
    run: nginx
    app: nginx
spec:
  rules:
  - host: nginx.borg.hyenaclan.org
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
